crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__dynamodb-duckdb[file]_tpch_q5.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q5"
---
+-----------+--------------------+
| n_name    | revenue            |
+-----------+--------------------+
| INDONESIA | 55502041.16969999  |
| VIETNAM   | 55295086.9967      |
| CHINA     | 53724494.256600015 |
| INDIA     | 52035512.00019999  |
| JAPAN     | 45410175.69539999  |
+-----------+--------------------+
