crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__dynamodb-duckdb[file]_tpch_q6.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q6"
---
+-------------+
| revenue     |
+-------------+
| 123141078.2 |
+-------------+
