crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__dynamodb-duckdb[file]_tpch_q8.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q8"
---
+--------+----------------------+
| o_year | mkt_share            |
+--------+----------------------+
| 1995   | 0.03443589040665482  |
| 1996   | 0.041485521293530336 |
+--------+----------------------+
