crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__dynamodb-duckdb[file]_tpch_q9.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q9"
---
+-----------+--------+--------------------+
| nation    | o_year | sum_profit         |
+-----------+--------+--------------------+
| ALGERIA   | 1998   | 27136900.1803      |
| ALGERIA   | 1997   | 48611833.49619999  |
| ALGERIA   | 1996   | 48285482.6782      |
| ALGERIA   | 1995   | 44402273.59990001  |
| ALGERIA   | 1994   | 48694008.0668      |
| ALGERIA   | 1993   | 46044207.783800006 |
| ALGERIA   | 1992   | 45636849.48810001  |
| ARGENTINA | 1998   | 28341663.784800004 |
| ARGENTINA | 1997   | 47143964.1176      |
| ARGENTINA | 1996   | 45255278.60209999  |
+-----------+--------+--------------------+
