crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__dynamodb-federated_tpch_q1.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q1"
---
+--------------+--------------+----------+--------------------+--------------------+--------------------+--------------------+--------------------+----------------------+-------------+
| l_returnflag | l_linestatus | sum_qty  | sum_base_price     | sum_disc_price     | sum_charge         | avg_qty            | avg_price          | avg_disc             | count_order |
+--------------+--------------+----------+--------------------+--------------------+--------------------+--------------------+--------------------+----------------------+-------------+
| A            | F            | 37734107 | 56586554400.73     | 53758257134.86999  | 55909065222.827644 | 25.522005853257337 | 38273.129734621674 | 0.04998529583838038  | 1478493     |
| N            | F            | 991417   | 1487504710.3799999 | 1413082168.0541003 | 1469649223.194375  | 25.516471920522985 | 38284.4677608483   | 0.050093426674216374 | 38854       |
| N            | O            | 74476040 | 111701729697.73999 | 106118230307.60556 | 110367043872.49695 | 25.50222676958499  | 38249.11798890826  | 0.04999658605370665  | 2920374     |
| R            | F            | 37719753 | 56568041380.89995  | 53741292684.60399  | 55889619119.83195  | 25.50579361269077  | 38250.85462609962  | 0.05000940583010984  | 1478870     |
+--------------+--------------+----------+--------------------+--------------------+--------------------+--------------------+--------------------+----------------------+-------------+
