crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__dynamodb-federated_tpch_q10.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q10"
---
+-----------+--------------------+-------------------+-----------+----------------+------------------------------------------+-----------------+-------------------------------------------------------------------------------------------------------------+
| c_custkey | c_name             | revenue           | c_acctbal | n_name         | c_address                                | c_phone         | c_comment                                                                                                   |
+-----------+--------------------+-------------------+-----------+----------------+------------------------------------------+-----------------+-------------------------------------------------------------------------------------------------------------+
| 57040     | Customer#000057040 | 734235.2455000001 | 632.87    | JAPAN          | nICtsILWBB                               | 22-895-641-3466 | ep. blithely regular foxes promise slyly furiously ironic depend                                            |
| 143347    | Customer#000143347 | 721002.6947999999 | 2557.47   | EGYPT          | ,Q9Ml3w0gvX                              | 14-742-935-3718 | endencies sleep. slyly express deposits nag carefully around the even tithes. slyly regular                 |
| 60838     | Customer#000060838 | 679127.3076999999 | 2454.77   | BRAZIL         | VWmQhWweqj5hFpcvhGFBeOY9hJ4m             | 12-913-494-9813 | tes. final instructions nag quickly according to                                                            |
| 101998    | Customer#000101998 | 637029.5667       | 3790.89   | UNITED KINGDOM | 0,ORojfDdyMca2E2H                        | 33-593-865-6378 | ost carefully. slyly regular packages cajole about the blithely final ideas. permanently daring deposit     |
| 125341    | Customer#000125341 | 633508.086        | 4983.51   | GERMANY        | 9YRcnoUPOM7Sa8xymhsDHdQg                 | 17-582-695-5962 | ly furiously brave packages. quickly regular dugouts kindle furiously carefully bold theodolites.           |
| 25501     | Customer#000025501 | 620269.7849       | 7725.04   | ETHIOPIA       | sr4VVVe3xCJQ2oo2QEhi19D,pXqo6kOGaSn2     | 15-874-808-6793 | y ironic foxes hinder according to the furiously permanent dolphins. pending ideas integrate blithely from  |
| 115831    | Customer#000115831 | 596423.8672000001 | 5098.1    | FRANCE         | AlMpPnmtGrOFrDMUs5VLo EIA,Cg,Rw5TBuBoKiO | 16-715-386-3788 | unts nag carefully final packages. express theodolites are regular ac                                       |
| 84223     | Customer#000084223 | 594998.0238999999 | 528.65    | UNITED KINGDOM | Eq51o UpQ4RBr  fYTdrZApDsPV4pQyuPq       | 33-442-824-8191 | longside of the slyly final deposits. blithely final platelets about the blithely i                         |
| 54289     | Customer#000054289 | 585603.3918       | 5583.02   | IRAN           | x3ouCpz6,pRNVhajr0CCQG1                  | 20-834-292-4707 |  cajole furiously after the quickly unusual fo                                                              |
| 39922     | Customer#000039922 | 584878.1133999999 | 7321.11   | GERMANY        | 2KtWzW,FYkhdWBfobp6SFXWYKjvU9            | 17-147-757-8036 | ironic deposits sublate furiously. carefully regular theodolites along the b                                |
+-----------+--------------------+-------------------+-----------+----------------+------------------------------------------+-----------------+-------------------------------------------------------------------------------------------------------------+
