crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__dynamodb-federated_tpch_q19.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q19"
---
+-------------+
| revenue     |
+-------------+
| 3083843.058 |
+-------------+
