crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__dynamodb-federated_tpch_q22.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q22"
---
+-----------+---------+--------------------+
| cntrycode | numcust | totacctbal         |
+-----------+---------+--------------------+
| 13        | 888     | 6737713.99         |
| 17        | 861     | 6460573.719999999  |
| 18        | 964     | 7236687.3999999985 |
| 23        | 892     | 6701457.949999999  |
| 29        | 948     | 7158866.629999997  |
| 30        | 909     | 6808436.129999998  |
| 31        | 922     | 6806670.18         |
+-----------+---------+--------------------+
