crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__dynamodb-federated_tpch_q3.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q3"
---
+------------+---------------------+-------------+----------------+
| l_orderkey | revenue             | o_orderdate | o_shippriority |
+------------+---------------------+-------------+----------------+
| 2456423    | 406181.011100000000 | 1995-03-05  | 0              |
| 3459808    | 405838.698900000000 | 1995-03-04  | 0              |
| 492164     | 390324.061000000000 | 1995-02-19  | 0              |
| 1188320    | 384537.935900000000 | 1995-03-09  | 0              |
| 2435712    | 378673.055800000000 | 1995-02-26  | 0              |
| 4878020    | 378376.795200000000 | 1995-03-12  | 0              |
| 5521732    | 375153.921500000000 | 1995-03-13  | 0              |
| 2628192    | 373133.309400000000 | 1995-02-22  | 0              |
| 993600     | 371407.459500000000 | 1995-03-05  | 0              |
| 2300070    | 367371.145200000000 | 1995-03-13  | 0              |
+------------+---------------------+-------------+----------------+
